Fix logo on mobile safari

--- a/project/css/style.css
+++ b/project/css/style.css
@@ -431,7 +431,7 @@ html {
             align-items: center;
             
         }
-        .page-header a {
+        .page-header h1 a {
             font-size: 2.9rem;
             margin: 0 auto;
     
@@ -578,7 +578,7 @@ html {
             max-height: 25rem;
         }
 
-        .page-header a {
+        .page-header h1 a {
             font-size: 5.5rem;
             -webkit-text-stroke: 0.1875rem black;
         }
